# metaflow-sandbox

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adding-a-backend.md  architecture.md  configuration.md  testing.md
src/metaflow_extensions/sandbox/plugins/: __init__.py  backend.py  sandbox_cli.py  sandbox_decorator.py  sandbox_executor.py
src/metaflow_extensions/sandbox/plugins/backends/: __init__.py  boxlite.py  daytona.py  e2b.py
tests/integration/: test_daytona_e2e.py  test_e2b_conda_pypi_e2e.py
tests/structural/: test_architecture.py
tests/unit/: test_decorator.py  test_executor.py  test_registry.py  test_sandbox_cli.py
tests/unit/backends/: test_boxlite.py  test_daytona.py  test_e2b.py
