[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-sandbox"
version = "0.1.0"
description = "Run Metaflow steps in isolated cloud sandboxes — instant container spinup via Daytona, E2B, or custom backends"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["metaflow>=2.12"]
authors = [
    { name = "npow" },
]
keywords = [
    "metaflow",
    "sandbox",
    "daytona",
    "e2b",
    "cloud",
    "containers",
    "ml",
    "machine-learning",
    "mlops",
    "orchestration",
    "remote-execution",
    "isolation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/npow/metaflow-sandbox"
Repository = "https://github.com/npow/metaflow-sandbox"
Issues = "https://github.com/npow/metaflow-sandbox/issues"
Documentation = "https://github.com/npow/metaflow-sandbox/tree/main/docs"

[project.optional-dependencies]
daytona = ["daytona>=0.1"]
e2b = ["e2b-code-interpreter>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metaflow_extensions"]

[tool.ruff]
src = ["src"]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
]

[tool.ruff.lint.isort]
known-first-party = ["metaflow_extensions"]
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "structural: tests that enforce architectural constraints",
    "integration: tests that require sandbox credentials",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
